--- a/index.html
+++ b/index.html
@@ -9,17 +9,48 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class= "top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="name-highlight">Shakil</span> Website</h1>
+            <h1><span class="orange-highlight">Shakil</span> Website</h1>
             <h3>World-class professional web dev</h3>
             <p>I am a professional web Developer.I am a professional web Developer.I am a professional web Developer.I am a professional web Developer.I am a professional web Developer.I am a professional web Developer.I am a professional web Developer.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.cn/in/shakil-ibn-rukan-770700184/">Hire me</a>
         </div>
     <div class="half-width">
-        <img src="images/profile.png" alt="">
+        <img src="images/profile1.png" alt="">
     </div>
     </section>
+
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/profile2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Big Dream</h2> 
+            <h3>Become No. 1 Developer in the world</h3>
+            <p>I have learned this topics. I have learned this topics. I have learned this topics. I have learned this topics. I have learned this topics. I have learned this topics. I have learned this topics. I have learned this topics. </p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.cn/in/shakil-ibn-rukan-770700184/">Download Resume</a>
+        </div>
+    </section>
+
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div id="full-stack" class="half-width single-experience">
+            <h2>Full Stack Web Dev</h2>
+            <h3 class="orange-highlight">2021 - Present | Pro level Web Dev</h3>
+            <p>I am the master of HTML,Css and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution</p>
+        </div>
+        <div id="baby-web" class="half-width single-experience">
+            <h2>Baby Web Dev</h2>
+            <h3 class="orange-highlight">2020 - 2021 | Programming Hero Learner</h3>
+            <p>They didn't offer me a job. But I made myself as a remove Web develper. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at programming Hero</p>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy Shakil 2021, all rights reserved.</p>
+    </footer>
     
 </body>
 </html>
